--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "classnames": "2.3.1",
     "date-fns": "2.22.1",
     "next": "latest",
+    "primeflex": "^3.1.0",
+    "primeicons": "^5.0.0",
+    "primereact": "^7.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remark": "^14.0.1",
