--- a/package.json
+++ b/package.json
@@ -1,25 +1,24 @@
 {
+  "name": "chihabjraoui-next-ts",
   "private": true,
   "scripts": {
-    "dev": "next",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "classnames": "2.3.1",
-    "date-fns": "2.22.1",
-    "next": "latest",
-    "primeflex": "^3.1.0",
-    "primeicons": "^5.0.0",
-    "primereact": "^7.1.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "remark": "^14.0.1",
-    "remark-html": "^15.0.0"
+    "bootstrap": "^5.1.3",
+    "next": "12.0.9",
+    "primereact": "^7.2.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "autoprefixer": "10.2.6",
-    "postcss": "8.3.5",
-    "tailwindcss": "^2.2.4"
+    "@types/node": "17.0.13",
+    "@types/react": "17.0.38",
+    "eslint": "8.8.0",
+    "eslint-config-next": "12.0.9",
+    "typescript": "4.5.5"
   }
 }
