--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "line-awesome": "^1.3.0",
     "next": "12.0.9",
     "primereact": "^7.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-transition-group": "^4.4.2",
+    "sass": "^1.49.8"
   },
   "devDependencies": {
     "@types/node": "17.0.13",
